# eeg-motor-imagery-ersp-cnn

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
notebooks/: 01_dataset_exploration.ipynb  01_explorar_dataset.ipynb  02_gdf_visual_exploration.ipynb
src/: config.py  dataset.py  ersp.py  evaluate.py  preprocessing.py  train.py
src/models/: __init__.py  eegnet.py  shallowconvnet.py  spectnet.py
