[project]
name = "eeg-motor-imagery-ersp-cnn"
version = "0.1.0"
description = "EEG motor imagery classification using ERSP spectrograms and CNN architectures"
requires-python = ">=3.10"
dependencies = [
    "mne>=1.6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.scripts]
preprocess = "src.preprocessing:main"
ersp       = "src.ersp:main"
train      = "src.train:main"
evaluate   = "src.evaluate:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
